--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,23 +20,23 @@
   "C_Cpp_Runner.enableWarnings": true,
   "C_Cpp_Runner.warningsAsError": false,
   "workbench.colorCustomizations": {
-    "activityBar.activeBackground": "#a7f6c5",
-    "activityBar.activeBorder": "#b38bf3",
-    "activityBar.background": "#a7f6c5",
+    "activityBar.activeBackground": "#56b6d0",
+    "activityBar.activeBorder": "#af3194",
+    "activityBar.background": "#56b6d0",
     "activityBar.foreground": "#15202b",
     "activityBar.inactiveForeground": "#15202b99",
-    "activityBarBadge.background": "#b38bf3",
-    "activityBarBadge.foreground": "#15202b",
-    "sash.hoverBorder": "#a7f6c5",
-    "statusBar.background": "#79f1a6",
+    "activityBarBadge.background": "#af3194",
+    "activityBarBadge.foreground": "#e7e7e7",
+    "sash.hoverBorder": "#56b6d0",
+    "statusBar.background": "#35a1be",
     "statusBar.foreground": "#15202b",
-    "statusBarItem.hoverBackground": "#4bec87",
-    "statusBarItem.remoteBackground": "#79f1a6",
+    "statusBarItem.hoverBackground": "#2a7f96",
+    "statusBarItem.remoteBackground": "#35a1be",
     "statusBarItem.remoteForeground": "#15202b",
-    "titleBar.activeBackground": "#79f1a6",
+    "titleBar.activeBackground": "#35a1be",
     "titleBar.activeForeground": "#15202b",
-    "titleBar.inactiveBackground": "#79f1a699",
+    "titleBar.inactiveBackground": "#35a1be99",
     "titleBar.inactiveForeground": "#15202b99"
   },
-  "peacock.color": "#79f1a6"
+  "peacock.color": "#35a1be"
 }
